{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 61,
  "lineage": "762df4a3-7f9d-2bba-636b-f4a73f894e7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b377cad9106c284",
            "association_id": "eipassoc-07f80f455998b552c",
            "domain": "vpc",
            "id": "eipalloc-09b377cad9106c284",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea7a772e2d5cc89a",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-18-204-184-184.compute-1.amazonaws.com",
            "public_ip": "18.204.184.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0005e0cfe09cc9050",
            "arn": "arn:aws:ec2:us-east-1:320959815901:instance/i-0530a10e2ffcc986a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0530a10e2ffcc986a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05dd42e7284b90ce8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05dd42e7284b90ce8",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.7",
            "public_ip": "54.160.186.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f3a018c817d175f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a10b039cabe3e3b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035a509e200f9bee8"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_network_interface.myvmnic",
            "aws_security_group.mydefaultsg",
            "aws_subnet.my_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:internet-gateway/igw-070d32c01121d65aa",
            "id": "igw-070d32c01121d65aa",
            "owner_id": "320959815901",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b377cad9106c284",
            "association_id": "eipassoc-07f80f455998b552c",
            "connectivity_type": "public",
            "id": "nat-0f4fb141de59e775c",
            "network_interface_id": "eni-0ea7a772e2d5cc89a",
            "private_ip": "10.0.0.100",
            "public_ip": "18.204.184.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a10b039cabe3e3b",
            "tags": {
              "Name": "mynatgateway"
            },
            "tags_all": {
              "Name": "mynatgateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "myvmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:network-interface/eni-05dd42e7284b90ce8",
            "attachment": [
              {
                "attachment_id": "eni-attach-01f5dd8215262e540",
                "device_index": 0,
                "instance": "i-0530a10e2ffcc986a"
              }
            ],
            "id": "eni-05dd42e7284b90ce8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:b1:60:f0:6a:1d",
            "owner_id": "320959815901",
            "private_ip": "10.0.0.7",
            "private_ip_list": [
              "10.0.0.7"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-035a509e200f9bee8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a10b039cabe3e3b",
            "tags": {
              "Name": "myvmicprimary"
            },
            "tags_all": {
              "Name": "myvmicprimary"
            }
          },
          "dependencies": [
            "aws_security_group.mydefaultsg",
            "aws_subnet.my_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbbea9d84665401a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f4fb141de59e775c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbbea9d84665401a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.my_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_internet_gateway_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-070d32c01121d65aa",
            "id": "r-rtb-0ddd509d7b57dc2751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ddd509d7b57dc275",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:route-table/rtb-0bbbea9d84665401a",
            "id": "rtb-0bbbea9d84665401a",
            "owner_id": "320959815901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4fb141de59e775c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myprivateroutetable"
            },
            "tags_all": {
              "Name": "myprivateroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:route-table/rtb-0ddd509d7b57dc275",
            "id": "rtb-0ddd509d7b57dc275",
            "owner_id": "320959815901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070d32c01121d65aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypublicroutetable"
            },
            "tags_all": {
              "Name": "mypublicroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_attach_to_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048b3a5a3bc30f400",
            "route_table_id": "rtb-0bbbea9d84665401a",
            "subnet_id": "subnet-0c1d99d5c9116f9b1"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.my_private_subnet",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f0a62f07d18b027",
            "route_table_id": "rtb-0bbbea9d84665401a",
            "subnet_id": "subnet-08862c55b4423d49d"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.my_private_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_attach_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fadfff374c07b3eb",
            "route_table_id": "rtb-0ddd509d7b57dc275",
            "subnet_id": "subnet-05a10b039cabe3e3b"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.my_public_subnet",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2c2f8ab91efafea",
            "route_table_id": "rtb-0ddd509d7b57dc275",
            "subnet_id": "subnet-0e6d95abe4114b2d6"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.my_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mydefaultsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:security-group/sg-035a509e200f9bee8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-035a509e200f9bee8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mydefaultsg",
            "name_prefix": "",
            "owner_id": "320959815901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydefaultsg"
            },
            "tags_all": {
              "Name": "mydefaultsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:subnet/subnet-0c1d99d5c9116f9b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d99d5c9116f9b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320959815901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myprivatesubnet-0"
            },
            "tags_all": {
              "Name": "myprivatesubnet-0"
            },
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:subnet/subnet-08862c55b4423d49d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08862c55b4423d49d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320959815901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myprivatesubnet-1"
            },
            "tags_all": {
              "Name": "myprivatesubnet-1"
            },
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:subnet/subnet-05a10b039cabe3e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a10b039cabe3e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320959815901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mypublicsubnet-0"
            },
            "tags_all": {
              "Name": "mypublicsubnet-0"
            },
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:subnet/subnet-0e6d95abe4114b2d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6d95abe4114b2d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320959815901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mypublicsubnet-1"
            },
            "tags_all": {
              "Name": "mypublicsubnet-1"
            },
            "vpc_id": "vpc-001b6b8a4f2e37ed4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:vpc/vpc-001b6b8a4f2e37ed4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0388a62397398fcec",
            "default_route_table_id": "rtb-0c0c11b2cf35fe951",
            "default_security_group_id": "sg-03bb3e3c8d66bd796",
            "dhcp_options_id": "dopt-78f84701",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001b6b8a4f2e37ed4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0c11b2cf35fe951",
            "owner_id": "320959815901",
            "tags": {
              "Name": "myVPC"
            },
            "tags_all": {
              "Name": "myVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320959815901:security-group-rule/sgr-06bbba30316a44f87",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-06bbba30316a44f87",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035a509e200f9bee8",
            "security_group_rule_id": "sgr-06bbba30316a44f87",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mydefaultsg",
            "aws_vpc.myvpc"
          ]
        }
      ]
    }
  ]
}